# anytwin_catkin_ws

./: .gitignore  diff.txt
src/anymal_c_renamable/: package.xml
src/anymal_c_renamable/config/extension/: none.yaml
src/anymal_c_renamable/config/feature_toggles/inspection/visual_inspection_dial/: enabled.yaml
src/anymal_c_renamable/config/non_ros/motion_control/dynamic_gaits_ros/: ComSupportControl.xml  ContactInvariantDamper.xml  Params.xml  TerrainModel.xml
src/anymal_c_renamable/config/non_ros/perception/point_cloud_filter/: pointmatcher_filters_lidar_depth_camera_large_box.yaml  pointmatcher_filters_velodyne_vlp16.yaml  self_filtering_front_limbs.yaml  sensor_streams_quadruple_depth_camera.yaml
src/anymal_c_renamable/launch/: clear_config.launch  load_robot_config.launch  notify_config_loaded.launch
src/anymal_c_renamable/urdf/: anymal_c_renamable.urdf.xacro
src/anymal_c_renamable/urdf/base/: base_3_0_macro.urdf.xacro
src/anymal_c_renamable/urdf/base/battery/: battery_3_0_4_macro.urdf.xacro  travel_battery_3_0_5_macro.urdf.xacro
src/anymal_c_renamable/urdf/base/sensors/depth_camera/: realsense_d435_3_1_1.urdf.xacro
src/anymal_c_renamable/urdf/base/shell/: sheet_metal_macro.urdf.xacro
src/anymal_c_renamable/urdf/leg/hip/: hip_3_1_1_macro.urdf.xacro
src/anymal_c_renamable/urdf/leg/shank/: shank_3_0_macro.urdf.xacro
src/anymal_c_renamable/urdf/leg/thigh/: thigh_3_0_1_macro.urdf.xacro  thigh_3_0_macro.urdf.xacro
src/leggedrobotics-anymal_research_rsl-70c2caecb930/anydrive/anydrive_sdk/anydrive/: CMakeLists.txt  package.xml
src/leggedrobotics-anymal_research_rsl-70c2caecb930/anydrive/anydrive_sdk/anydrive/matlab/: calibration_encoder_offset.m  calibration_friction_estimation.m  calibration_gravity_compensation.m  calibration_spring_stiffness_ati.m  calibration_spring_stiffness_manual.m  smooth_sign.m  test_smooth_sign.m
src/leggedrobotics-anymal_research_rsl-70c2caecb930/anydrive/anydrive_sdk/anydrive/src/: parse_statusword.cpp
src/leggedrobotics-anymal_research_rsl-70c2caecb930/anydrive/anydrive_sdk/anydrive/test/: VersionTest.cpp
src/leggedrobotics-anymal_research_rsl-70c2caecb930/anydrive/anydrive_sdk/anydrive_ethercat/: CMakeLists.txt  package.xml
src/leggedrobotics-anymal_research_rsl-70c2caecb930/anydrive/anydrive_sdk/anydrive_ethercat/src/: anydrive_ethercat_controller_example.cpp  anydrive_ethercat_minimal_example.cpp  anydrive_ethercat_setup_example.cpp
src/leggedrobotics-anymal_research_rsl-70c2caecb930/anydrive/anydrive_sdk/anydrive_ethercat_ros/: CMakeLists.txt  package.xml
src/leggedrobotics-anymal_research_rsl-70c2caecb930/anydrive/anydrive_sdk/anydrive_ethercat_ros/launch/: anydrive_ethercat_ros.launch  anydrive_ethercat_ros_setcap.launch
src/leggedrobotics-anymal_research_rsl-70c2caecb930/anydrive/anydrive_sdk/anydrive_ethercat_ros/script/: anydrive_ethercat_ros_setcap.sh
src/leggedrobotics-anymal_research_rsl-70c2caecb930/anydrive/anydrive_sdk/anydrive_ethercat_ros/src/: anydrive_ethercat_ros_node.cpp
src/leggedrobotics-anymal_research_rsl-70c2caecb930/anydrive/anydrive_sdk/anydrive_monitor/: CMakeLists.txt  package.xml
src/leggedrobotics-anymal_research_rsl-70c2caecb930/anydrive/anydrive_sdk/anydrive_monitor/resource/: resources.qrc
src/leggedrobotics-anymal_research_rsl-70c2caecb930/anydrive/anydrive_sdk/anydrive_msgs/: CMakeLists.txt  package.xml
src/leggedrobotics-anymal_research_rsl-70c2caecb930/anydrive/anydrive_sdk/anydrive_msgs/msg/: CalibrationMode.msg  CalibrationType.msg  Command.msg  Commands.msg  DriveInfo.msg  (+15 more)
src/leggedrobotics-anymal_research_rsl-70c2caecb930/anydrive/anydrive_sdk/anydrive_ros/: CMakeLists.txt  package.xml
src/leggedrobotics-anymal_research_rsl-70c2caecb930/anydrive/anydrive_sdk/anydrive_sdk_doc/: CMakeLists.txt  doxygen.config.in  mainpage.dox  package.xml
src/leggedrobotics-anymal_research_rsl-70c2caecb930/anydrive/anydrive_sdk/rqt_anydrive_monitor/: CMakeLists.txt  package.xml  plugin.xml  setup.py
src/leggedrobotics-anymal_research_rsl-70c2caecb930/anydrive/series_elastic_actuator/series_elastic_actuator/: CMakeLists.txt  package.xml
src/leggedrobotics-anymal_research_rsl-70c2caecb930/anydrive/series_elastic_actuator/series_elastic_actuator_anydrive/: CMakeLists.txt  package.xml
src/leggedrobotics-anymal_research_rsl-70c2caecb930/anydrive/series_elastic_actuator/series_elastic_actuator_msgs/: CMakeLists.txt  package.xml
src/leggedrobotics-anymal_research_rsl-70c2caecb930/anydrive/series_elastic_actuator/series_elastic_actuator_sim/: CMakeLists.txt  package.xml
src/leggedrobotics-anymal_research_rsl-70c2caecb930/anymal/anymal/anymal_description/: CMakeLists.txt  package.xml
src/leggedrobotics-anymal_research_rsl-70c2caecb930/application_data/sandbox_data/: .gitignore  CMakeLists.txt  actions.yaml  collections.yaml  package.xml
src/leggedrobotics-anymal_research_rsl-70c2caecb930/application_data/sandbox_data/actions/: gap_climb_down.py  gap_climb_up.py
src/leggedrobotics-anymal_research_rsl-70c2caecb930/application_data/sandbox_data/environments/: empty.yaml  playground.yaml
src/leggedrobotics-anymal_research_rsl-70c2caecb930/application_data/sandbox_data/rviz/: playground.yaml
src/leggedrobotics-anymal_research_rsl-70c2caecb930/application_data/sandbox_data/staircase_descriptions/: sandbox_building_stairs_low.yaml  sandbox_platform_stairs_high.yaml  sandbox_platform_stairs_low.yaml  sandbox_tunnel_stairs.yaml  sandbox_wide_stairs_left.yaml  sandbox_wide_stairs_right.yaml  stairs_200x200.yaml
src/leggedrobotics-anymal_research_rsl-70c2caecb930/application_data/sandbox_data/waypoints/: playground.json
src/leggedrobotics-anymal_research_rsl-70c2caecb930/application_data/sandbox_data/worlds/: playground.world  stairs_200x200.world
src/leggedrobotics-anymal_research_rsl-70c2caecb930/drivers/actuators/libdynamixel/: CMakeLists.txt  README.md  package.xml
src/leggedrobotics-anymal_research_rsl-70c2caecb930/tools/std_utils/: CMakeLists.txt  package.xml
src/leggedrobotics-anymal_research_rsl-70c2caecb930/tools/std_utils/test/: remove_first_if_test.cpp
(+4492 files in other folders)
