<?xml version="1.0"?>

<package format="2">

  <name>anymal_c_renamable</name>
  <version>1.0.0</version>
  <description>ANYmal C Package</description>

  <license>Proprietary</license>

  <author email="rdiethelm@anybotics.com">Remo Diethelm</author>
  <author email="lisler@anybotics.com">Linus Isler</author>
  <author email="jstolle@student.ethz.ch">Jonas Stolle</author>

  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>
  <maintainer email="lisler@anybotics.com">Linus Isler</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>parameterized_xacro</exec_depend>
  <exec_depend>stack_launcher</exec_depend>
  <exec_depend>any_description</exec_depend>

</package>
