<?xml version="1.0"?>
<package format="2">

  <name>sandbox_data</name>
  <version>0.1.0</version>
  <description>Sandbox environment data.</description>

  <author email="lisler@anybotics.ch">Linus Isler</author>
  <maintainer email="lisler@anybotics.com">Linus Isler</maintainer>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>curl</build_depend>
  <build_depend>wget</build_depend>

  <exec_depend>anymal_basic_actions</exec_depend>

</package>
