<?xml version="1.0"?>

<package format="2">

  <name>anydrive_ethercat</name>
  <version>0.6.0</version>
  <description>C++ library deriving the abstract communication interface classes in the anydrive library for EtherCAT.</description>

  <license>Proprietary</license>
  <author email="rdiethelm@anybotics.com">Remo Diethelm</author>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>
  <maintainer email="pleemann@anybotics.com">Philipp Leemann</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_clang_tools</build_depend>

  <depend>anydrive</depend>
  <depend>soem</depend>
  <depend>soem_interface</depend>

</package>
