<?xml version="1.0"?>

<package format="2">

  <name>anydrive_msgs</name>
  <version>0.6.0</version>
  <description>ROS message and service definitions.</description>

  <license>Proprietary</license>
  <author email="rdiethelm@anybotics.com">Remo Diethelm</author>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>
  <maintainer email="pleemann@anybotics.com">Philipp Leemann</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

</package>
