<?xml version="1.0"?>

<package format="2">

  <name>anydrive_sdk_doc </name>
  <version>0.6.0</version>
  <description>Documentation for the ANYdrive SDK packages.</description>

  <license>Proprietary</license>
  <author email="rdiethelm@anybotics.com">Remo Diethelm</author>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>
  <maintainer email="pleemann@anybotics.com">Philipp Leemann</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>anydrive</depend>
  <depend>anydrive_ethercat</depend>
  <depend>anydrive_ethercat_ros</depend>
  <depend>anydrive_monitor</depend>
  <depend>anydrive_msgs</depend>
  <depend>anydrive_ros</depend>
  <depend>rqt_anydrive_monitor</depend>
  <build_depend>doxygen</build_depend>

</package>

