<?xml version="1.0"?>

<package format="2">

  <name>series_elastic_actuator</name>
  <version>0.4.0</version>
  <description>The series_elastic_actuator package</description>

  <author email="cgehring@anybotics.com">Christian Gehring</author>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>
  <maintainer email="sbachmann@anybotics.com">Samuel Bachmann</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>any_measurements</depend>

</package>
