<?xml version="1.0"?>
<package format="2">
  <name>series_elastic_actuator_msgs</name>
  <version>0.4.0</version>
  <description>The series_elastic_actuator_msgs package</description>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>
  <maintainer email="sbachmann@anybotics.com">Samuel Bachmann</maintainer>
  <author email="cgehring@anybotics.com">Christian Gehring</author>
  <license>Proprietary</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
